syntax = "proto3";

package models;
option go_package = "logs-grpc/gen/go/models";
option java_package = "com.devappsys.log";
message UploadResponse {
  bool success = 1;
  string message = 2;
  bool live_tracking_enabled = 3;
}

message CompressedFileUpload {
  bytes compressed_data = 1;     // gzip/zstd compressed
  string data_type = 2;          // "log", "event", "context"
  string compression_type = 3;   // e.g., "gzip"
}